# Projet-shiny-qui-brille

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml
src/: api.py
src/api/: app.py
src/api/core/: config.py  registry.py
src/api/routers/: health.py  model.py  predict.py
src/api/schemas/: candle.py  responses.py
src/api/services/: prediction.py
src/api/templates/: signal.html  technology.html
src/app/: app.py  phase11_model_registry.py  phase1_import_m1.py  phase2_aggregation_m15.py  phase3_nettoyage_m15.py  phase4_eda.py  phase5_feature_engineering.py  phase6_baseline.py  phase7_ml.py  phase8_rl.py  phase9_evaluation.py  simulation_10k.py
src/app/templates/: base.html  home.html  performance.html  signal.html  simulation.html  technology.html
src/core/: registry.py
src/schemas/: responses.py
src/services/: prediction.py
