[tool.poetry]
name = "projet-shiny-qui-brille"
version = "0.1.0"
description = "Projet de Data Science"
authors = ["Alphonse Marcay <[EMAIL_ADDRESS]>", "Thomas Bourvon"]

dependencies = [
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "streamlit>=1.31.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
