[project]
name = "projet-shiny-qui-brille"
version = "0.1.0"
description = "Projet de Data Science"
authors = [
    { name = "Alphonse Marcay" },
    { name = "Thomas Bourvon" },
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "stable-baselines3>=2.1.0",
    "gymnasium>=0.29.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    "flask>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "tqdm>=4.67.3",
    "rich>=14.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
